--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 	<header>
 		<h2>
-			<a href="#">Portfolio</a>
+			<a href="">Portfolio</a>
 		</h2>
 		<nav>
 			<li>
-				<a href="#">Home</a>
+				<a href="">Home</a>
 			</li>
 			<li>
 				<a href="#C1">About</a>
