--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 	<section class="about-me" id="C1">
 		<h3 class="title">About Me</h3>
 
-		<p>BTech graduate in Computer Science and Engineering offering a strong foundation in software engineering and programming
+		<p>B.Tech graduate in Computer Science and Engineering offers a strong foundation in software engineering and programming
 			principles across multiple platforms. Experienced in object-oriented programming; developing, testing and debugging code.
-			Developing Web interfaces , wannabe fullstack web developer.Apart from that I am Data science enthusiast. My hobbies are
-			waching movies , listening music and reading about latest tech news.Apart from all that I am data science enthusiast and
+			Developing Web pages , wannabe fullstack web developer. My hobbies are
+			watching movies , listening to music (especially Pop and rock) and reading about latest tech news.Apart from all that I am data science enthusiast and
 			would love to try my hands on it.
 		</p>
 
